--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="Page2.css" />
+    <link rel="stylesheet" href="page2.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -29,7 +29,7 @@
     </Center>
       <div class="upper-container4">
         <div id="arrow">
-          <a href="./index1.html">
+          <a href="./1.html">
             <i
             class="fa fa-arrow-circle-left"
             style="font-size: 48px; color: red "
